# Attention

./: CMakeCache.txt  CMakeLists.txt  Phase-1.md  README.md
Phase-1/: CMakeLists.txt
Phase-1/benchmarks/: phase1_benchmarks.cpp
Phase-1/include/: anisotropic_distance.h  exact_decomposition.h  metric_assembly.h  numerical_stability.h  phase1_forward.h  phase1_types.h  smao_phase1.h  whiten_coordinates.h
Phase-1/src/: anisotropic_distance.cpp  exact_decomposition.cpp  metric_assembly.cpp  phase1_forward.cpp  smao_c_interface.cpp  whiten_coordinates.cpp
Phase-1/tests/: test_adversarial_orthogonal.cpp  test_anisotropic_consistency.cpp  test_distribution_preservation.cpp  test_exact_decomposition.cpp  test_gradient_verification.cpp  test_near_singular_metric.cpp  test_overflow_guard.cpp  test_whitening_isometry.cpp
benchmarks/: benchmark_throughput.cpp
cmake/: InstallDependencies.cmake
include/smao_phase1/: smao_phase1.h
include/smao_phase1/core/: anisotropic_distance.h  exact_decomposition.h  metric_assembly.h  numerical_guards.h  phase1_forward.h  types.h  whiten_coordinates.h
src/: c_api.cpp
src/core/: anisotropic_distance.cpp  exact_decomposition.cpp  metric_assembly.cpp  numerical_guards.cpp  phase1_forward.cpp  types.cpp  whiten_coordinates.cpp
tests/: test_algebraic_equivalence.cpp  test_anisotropic_distance.cpp  test_exact_decomposition.cpp  test_gradient_accuracy.cpp  test_metric_assembly.cpp  test_numerical_guards.cpp  test_phase1_forward.cpp  test_whiten_coordinates.cpp
